# sumo-mcp-server

./: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  TESTING.md  __init__.py  claude_desktop_config.json  list_tools.py  pyproject.toml  requirements.txt  server.py  sumopy_wrapper.py  test_animations.py  test_jump_kick.py  test_mcp_client.py
tests/: list_tools.py  test_animations.py  test_jump_kick.py  test_mcp_client.py
